name:                xmonad-config
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/j1r1k/xmonad-config#readme
license:             BSD3
license-file:        LICENSE
author:              Jiri Marsicek
maintainer:          jiri.marsicek@gmail.com
copyright:           2016 Jiri Marsicek
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable xmonad
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-missing-signatures -Werror
  build-depends:       base
                     , containers
                     , data-default
                     , hostname
                     , xmonad
                     , xmonad-contrib
                     , X11
  default-language:    Haskell2010
